# realtime_analytics_fastapi

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_03_0851-01_initial_migration.py  2025_10_10_0935-01_initial_migration.py  2025_12_15_1242-1,_initial_commit.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  analytics.py  auth.py  events.py  health.py  tasks.py  websocket.py
app/api/validators/: __init__.py  event.py
app/core/: auth.py  base.py  celery.py  config.py  db.py  logging.py
app/crud/: __init__.py  analytics.py  event.py
app/models/: __init__.py  event.py  user.py
app/schemas/: __init__.py  analytics.py  event.py  health.py  task.py  user.py
app/services/: __init__.py  background_tasks.py  redis_service.py  websocket_manager.py
app/services/constants/: redis_constants.py  websocket_constants.py
app/tasks/: __init__.py  aggregation_tasks.py  cleanup_tasks.py  decorators.py  monitoring_tasks.py  realtime_tasks.py
tests/: conftest.py  test_analytics_api.py  test_celery_tasks.py  test_events_api.py  test_redis_service.py  test_websocket.py
tests/mocks/: celery_mocks.py  event_mocks.py  redis_mocks.py  user_mocks.py  websocket_mocks.py
